--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Password Generator</h1>
 
         <div class="result-group">
-            <input type="text" readonly>
+            <input type="text" class="displayPass" readonly>
             <button class="clipboard-btn"><i class="fa-regular fa-clipboard"></i></button>
         </div>
 
